// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Renders default layout 1`] = `
<View
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 75,
        "marginBottom": -40,
        "marginTop": 0,
      }
    }
  >
    “
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 25,
        "lineHeight": 30,
      }
    }
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 20,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 13,
          "marginBottom": 0,
          "paddingTop": 4,
        }
      }
    >
      Judge Sapnara
    </Text>
  </View>
</View>
`;

exports[`2. Renders without a caption 1`] = `
<View
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 75,
        "marginBottom": -40,
        "marginTop": 0,
      }
    }
  >
    “
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 25,
        "lineHeight": 30,
      }
    }
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 20,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 13,
          "marginBottom": 0,
          "paddingTop": 4,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`3. Renders with a twitter handle 1`] = `
<View
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 75,
        "marginBottom": -40,
        "marginTop": 0,
      }
    }
  >
    “
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 25,
        "lineHeight": 30,
      }
    }
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 20,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 13,
          "marginBottom": 0,
          "paddingTop": 4,
        }
      }
    >
      Judge Sapnara
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderLeftColor": "#696969",
          "borderLeftWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "height": 15,
          "marginLeft": 7,
          "paddingLeft": 7,
        }
      }
    >
      <ARTSurfaceView
        style={
          Object {
            "height": 9.6,
            "width": 12,
          }
        }
      >
        <ARTGroup
          opacity={1}
          transform={
            Array [
              0.016,
              0,
              0,
              0.016,
              5.664,
              4.464,
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                391.3,
                -210.7,
                3,
                362.40000000000003,
                -199.79999999999998,
                333.5,
                -189,
                304.6,
                -185.39999999999998,
                3,
                337.1,
                -203.49999999999997,
                358.8,
                -235.99999999999997,
                373.3,
                -268.5,
                3,
                344.40000000000003,
                -250.4,
                311.8,
                -239.6,
                275.70000000000005,
                -232.4,
                3,
                246.80000000000004,
                -261.3,
                207.00000000000006,
                -279.4,
                163.70000000000005,
                -279.4,
                3,
                80.60000000000005,
                -279.4,
                11.900000000000034,
                -210.7,
                11.900000000000034,
                -127.59999999999997,
                3,
                11.900000000000034,
                -116.79999999999997,
                11.900000000000034,
                -102.29999999999997,
                15.500000000000034,
                -91.49999999999997,
                3,
                -110.99999999999997,
                -98.79999999999997,
                -223.09999999999997,
                -160.2,
                -298.99999999999994,
                -250.49999999999997,
                3,
                -313.49999999999994,
                -228.79999999999998,
                -320.69999999999993,
                -199.89999999999998,
                -320.69999999999993,
                -174.59999999999997,
                3,
                -320.69999999999993,
                -120.39999999999996,
                -295.3999999999999,
                -73.39999999999996,
                -251.99999999999994,
                -48.099999999999966,
                3,
                -277.29999999999995,
                -48.099999999999966,
                -298.99999999999994,
                -55.29999999999997,
                -320.69999999999993,
                -66.19999999999996,
                3,
                -320.69999999999993,
                -66.19999999999996,
                -320.69999999999993,
                -66.19999999999996,
                -320.69999999999993,
                -62.59999999999996,
                3,
                -320.69999999999993,
                9.700000000000038,
                -266.49999999999994,
                74.80000000000004,
                -197.79999999999993,
                85.60000000000002,
                3,
                -212.29999999999993,
                89.20000000000002,
                -223.09999999999994,
                89.20000000000002,
                -237.49999999999994,
                89.20000000000002,
                3,
                -248.39999999999995,
                89.20000000000002,
                -255.59999999999994,
                89.20000000000002,
                -266.3999999999999,
                85.60000000000002,
                3,
                -248.29999999999993,
                147.10000000000002,
                -190.49999999999991,
                190.40000000000003,
                -125.39999999999992,
                190.40000000000003,
                3,
                -175.99999999999991,
                230.20000000000005,
                -244.69999999999993,
                255.50000000000003,
                -313.3999999999999,
                255.50000000000003,
                3,
                -324.19999999999993,
                255.50000000000003,
                -338.69999999999993,
                255.50000000000003,
                -349.49999999999994,
                251.90000000000003,
                3,
                -280.79999999999995,
                295.20000000000005,
                -201.29999999999995,
                320.6,
                -114.59999999999994,
                320.6,
                3,
                167.2,
                320.6,
                319,
                89.3,
                319,
                -113.1,
                3,
                319,
                -120.3,
                319,
                -127.5,
                319,
                -131.2,
                3,
                344.3,
                -152.9,
                369.6,
                -181.8,
                391.3,
                -210.7,
                1,
              ]
            }
            fill={
              Array [
                0,
                0,
                0.4,
                0.6,
                1,
              ]
            }
            opacity={1}
            stroke={null}
            strokeCap={1}
            strokeDash={null}
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          />
        </ARTGroup>
      </ARTSurfaceView>
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        href="https://twitter.com/@henrywinter"
        style={
          Object {
            "color": "#006699",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 13,
            "marginLeft": 3,
            "paddingTop": 4,
            "textDecorationLine": "none",
          }
        }
        target="_blank"
      >
        @henrywinter
      </Text>
    </View>
  </View>
</View>
`;

exports[`4. Renders with different colours 1`] = `
<View
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#850029",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 75,
        "marginBottom": -40,
        "marginTop": 0,
      }
    }
  >
    “
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 25,
        "lineHeight": 30,
      }
    }
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 20,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#850029",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 13,
          "marginBottom": 0,
          "paddingTop": 4,
        }
      }
    >
      Judge Sapnara
    </Text>
  </View>
</View>
`;
